# C11Examples

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  FunctionalProgramming.cpp  FunctionalProgramming.h  Manager.cpp  Manager.h  MultiThreading.cpp  MultiThreading.h  Task.cpp  Task.h  Worker.cpp  Worker.h  main.cpp
test/src/: CMakeLists.txt  TestExamples.cpp  TestWorkers.cpp
